config-app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config
      tier: app
  template:
    metadata:
      labels:
        app: config
        tier: app
    spec:
      containers:
        - name: config
          image: docker.io/kikiki0611/conf-app:latest
          ports:
            - containerPort: 8888
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: config-app-service
spec:
  type: NodePort
  ports:
    - port: 8888
      protocol: TCP
      nodePort: 8888
  selector:
    app: config
    tier: app
