eureka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
      tier: app
  template:
    metadata:
      labels:
        app: eureka
        tier: app
    spec:
      containers:
        - name: eureka
          image: docker.io/kikiki0611/ecommers:latest
          ports:
            - containerPort: 8761
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: eureka-app-service
spec:
  ports:
    - port: 8761
      protocol: TCP
  selector:
    app: eureka
    tier: app
