push-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: push-app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: push
      tier: app
  template:
    metadata:
      labels:
        app: push
        tier: app
    spec:
      containers:
        - name: push
          image: docker.io/kikiki0611/push-app:latest
          ports:
            - containerPort: 8080
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: push-app-service
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: push
    tier: app
