user-app.yml
  
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
      tier: app
  template:
    metadata:
      labels:
        app: user
        tier: app
    spec:
      containers:
        - name: user
          image: docker.io/kikiki0611/user-app:latest
          ports:
            - containerPort: 8080
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: user-app-service
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: user
    tier: app
