ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: config-app-ingress
spec:
  rules:
    - host: dev.floraum.co.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: config-app-service
                port:
                  number: 8888
    - host: eureka.floraum.co.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eureka-service
                port:
                  number: 8761
